--- a/_posts/2025-04-21-face-blur.md
+++ b/_posts/2025-04-21-face-blur.md
@@ -1,17 +1,16 @@
 ## Face Blur
 
-There are many face detectors I could use for this and many guides for them. Including ones made by and for MediaPipe. However, those are for the MediaPipe Facelandmarker, not for Poselandmarker. Pose landmarker is not as robust for detecting faces (only detecting eyes, mouth corners, nose and ears) but does have parts of the face to analyse. I wanted to use Poselandmarker to create a mask just for the face. This turned out to be a challenge as Pose landmarker had no elegant way of doing this. I tried at first creating a polygon to make a mask but this did not work. Eventually, I turned to AI for some help. This got me producing an oval mask based on distance between ears and nose as the centre as that was something that made sense from what Pose landmarker gives you. This worked great for looking straight forward but not for looking sideways. As the centre was on the nose, the centre of the mask was not where my face was. And as the it was based on ear span, the difference in x and y for my ears while facing sideways was small so the produced mask pretty much just covered the tip of my nose. I tried using AI further to fix this but its suggestions did not work.
+There are many face detectors I could use for this and many guides for them. Including ones made by and for MediaPipe. However, those are for the MediaPipe Facelandmarker, not for Poselandmarker. Pose landmarker is not as robust for detecting faces (only detecting eyes, mouth corners, nose and ears) but does have parts of the face to analyse. I wanted to use Poselandmarker to create a mask just for the face. This turned out to be a challenge as Pose landmarker had no elegant way of doing this. I tried at first creating a polygon to make a mask but this did not work. Eventually, I turned to AI for some help. This got me producing an oval mask based on distance between ears and nose as the centre as that was something that made sense from what Pose landmarker gives you. This worked great for looking straight forward but not for looking sideways. As the centre was on the nose, the centre of the mask was not where my face was. The difference in x and y for my ears while facing sideways was small so, since the ellipsis was based on ear span, the produced mask pretty much just covered the tip of my nose. I tried using AI further to fix this but its suggestions did not work.
 
 ### Suggestions that were attempted but did not work
 
 * Look at which ear is visible by looking at if mediapipe was landmarking it. It tracked both ears even if they weren't in frame.
 * Use landmarker.visibility to look at visibility of ears to detect which is facing the camera. The difference between visibility variables of the in frame ear and out of frame ear were inconsistent and negligible (0.998 vs 0.997)
 
-
 ### What eventually worked
 
 After looking at it for a while the solution came to me while I was eating food, not through an AI. I realised that if the landmarker was still estimating the x and y position of the ear not in frame, I could compare this to the x and y of the nose to figure out which way the person was facing. Now the radius of the elipsis was determined by whichever was bigger: the distance between the ears, the distance between the nose and the left ear, the distance between the nose and the right ear. If the person is facing forwards, the nose is in the middle and thus the ears are further apart from eachother than the nose. But when facing sideways, the ears of both on the same side of the nose and thus closer to each other (x and y-wise) than the nose. Using this I could move the mask to more of the centre of the face and make it an appropriate size. Now the mask blurs the face no matter which way the subject is looking relative to the camera.<br/>
-Proving I am still smarter than an AI. 
+Proving I am still smarter than an AI.
 
 ### To Do:
 * Bug test new feature
